# storai-booker

./: .env.production.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_COMMANDS.md  PERFORMANCE.md  PHASE1_TESTING.md  PHASE2_COMPLETE.md  PHASE2_TEST_RESULTS.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  start-services.sh  test_phase1.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  list_gemini_models.py  main.py  pyproject.toml  test_phase2_e2e.py  test_phase3_e2e.py  test_phase3_offline.py
backend/app/: __init__.py
backend/app/api/: auth.py  bookmarks.py  dependencies.py  exports.py  settings.py  sharing.py  stories.py  templates.py
backend/app/core/: config.py  database.py  logging.py
backend/app/middleware/: error_handler.py  request_context.py  security.py
backend/app/models/: bookmark.py  comment.py  settings.py  storybook.py  template.py  user.py
backend/app/schemas/: auth.py  bookmark.py  comment.py  critic.py  export.py  settings.py  share.py  story.py  template.py
backend/app/services/: auth.py  cache.py  celery_app.py  content_safety.py  crypto.py  oauth.py  sanitizer.py  storage.py
backend/app/services/agents/: __init__.py  coordinator.py  page_generator.py  validator.py
backend/app/services/export/: __init__.py  base.py  comic.py  epub.py  images.py  pdf.py
backend/app/services/image/: __init__.py  base.py  compositor.py  google_imagen.py  provider_factory.py
backend/app/services/llm/: __init__.py  base.py  (+2 more)
backend/app/tasks/: __init__.py  story_generation.py
backend/scripts/: migrate_stories_to_users.py  seed_templates.py
backend/tests/: README.md  conftest.py  test_agents.py  test_api_settings.py  test_api_stories.py  test_auth.py  test_llm_providers.py  test_oauth.py  test_prompts.py  test_sharing.py  test_storage.py  test_story_generation.py
(+153 files in other folders)
